projects/spaza/user/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: user
  name: user-svc
  namespace: spaza
spec:
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: user
